# brecoder

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json
.github/workflows/: release.yml
crates/biliup/: Cargo.toml
docs/examples/: config.json  cookies.json
src/: bilibili.rs  config.rs  main.rs  monitor.rs  recorder.rs  server.rs  uploader.rs
