[workspace]
members = ["crates/biliup"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
reqwest = { version = "0.13" }
tokio = { version = "1.52.3" }
tracing = "0.1.41"
chrono = { version = "0.4.42", features = ["serde"] }
url = "2.5"
thiserror = "2.0"
bytes = "1.11"
futures = "0.3"
bon = "3.6"
rand = "0.8"
regex = "1.12"
async-trait = "0.1"
tracing-subscriber = "0.3.19"

[package]
name = "brecoder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["cookies", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
biliup = { path = "crates/biliup" }
